--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light fixed-top">
 
   <div class="container-fluid">
     <a class="navbar-brand" >Rijil</a>
@@ -11,27 +11,31 @@
         <li class="nav-item" 
           routerLinkActive="active-link" 
           [routerLinkActiveOptions]="{exact: true}">
+          <!-- <a class="nav-link active" aria-current="page"  
+           routerLink = "" fragment="about">About</a> -->
           <a class="nav-link active" aria-current="page"  
-           routerLink = "" 
-          fragment="about">About</a>
+           [routerLink] = "['/About']" >About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink = "" 
-          fragment="art">Art</a>
+          <!-- <a class="nav-link" routerLink = "" 
+          fragment="art">Art</a> -->
+          <a class="nav-link" [routerLink] = "['/Art']">Art</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  routerLink = "" 
-          fragment="conatct">Contact</a>
+          <!-- <a class="nav-link"  routerLink = "" 
+          fragment="contact">Contact</a> -->
+          <a class="nav-link"  [routerLink] = "['/Contact']"
+         >Contact</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div>
+<!-- <div>
 <app-about id="about"></app-about>
 <app-art id="art"></app-art>
 <app-contact id="contact"></app-contact>
-</div>
+</div> -->
 
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
