--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,14 +1,15 @@
-<div class="flex-container">
+
+<div class="flex-container container">
 
     <div class="flex-child">
         <div class="d-flex align-items-center justify-content-center h-100">
             <div>
-            <h3>Rijil Raj</h3>
-            <h5>PortraitArtist</h5><br>
+            <h1>Rijil Raj</h1>
+            <h3>PortraitArtist</h3><br>
             <p>It is only by drawing often, drawing everything, drawing incessantly, that one fine day you discover, to your surprise,
             that you have rendered something in its true character
             <br> <small class="d-flex justify-content-end">Camille Pissarro</small>
-        </p>
+            </p>
         </div>
         </div>
     </div>
@@ -18,3 +19,4 @@
     </div>
 
 </div>
+
