--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,29 @@
-<nav class="navbar navbar-expand-lg bg-light fixed-top">
+<nav class="navbar navbar-expand-lg bg-light navbar-static-top">
 
   <div class="container-fluid">
-    <a class="navbar-brand" >Rijil</a>
+    <a class="navbar-brand"  [routerLink] = "['/About']">Rijil</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item" 
-          routerLinkActive="active-link" 
+        <li class="nav-item"
+          routerLinkActive="active-link"
           [routerLinkActiveOptions]="{exact: true}">
-          <!-- <a class="nav-link active" aria-current="page"  
+          <!-- <a class="nav-link active" aria-current="page"
            routerLink = "" fragment="about">About</a> -->
-          <a class="nav-link active" aria-current="page"  
+          <a class="nav-link active" aria-current="page"
+             routerLinkActive="is-active"
            [routerLink] = "['/About']" >About</a>
         </li>
         <li class="nav-item">
-          <!-- <a class="nav-link" routerLink = "" 
+          <!-- <a class="nav-link" routerLink = ""
           fragment="art">Art</a> -->
           <a class="nav-link" [routerLink] = "['/Art']">Art</a>
         </li>
         <li class="nav-item">
-          <!-- <a class="nav-link"  routerLink = "" 
+          <!-- <a class="nav-link"  routerLink = ""
           fragment="contact">Contact</a> -->
           <a class="nav-link"  [routerLink] = "['/Contact']"
          >Contact</a>
