--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,19 +1,68 @@
+<div class="container p-3 my-3 ">
+  <div class="row h-100">
+    <div class="col ">
+      <h1>GET IN TOUCH</h1>
+      <form #myForm="ngForm" (ngSubmit)="onSubmit()">
 
-<div class="container h-100">
-<h1>GET IN TOUCH</h1>
-<form>
-    <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" aria-describedby="emailHelp"
-            placeholder="Name">
-        <small id="emailHelp" class="form-text text-muted"></small>
-    </div>
-    <div class="form-group">
-        <label for="email">Password</label>
-        <input type="email" class="form-control" id="email" placeholder="Email">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+        <div class="form-group mb-3">
+          <div class="col-xs-3">
+            <label for="fname">Name</label>
+            <input type="text"
+                   class="form-control form-control-lg"
+                   id="fname"
+                   [(ngModel)]="name"
+                   #fName="ngModel"
+                   name="fname"
+                   required
+                   aria-describedby="emailHelp">
+            <small *ngIf="fName.invalid && fName.touched">Required</small>
+          </div>
+        </div>
 
+        <div class="form-group mb-3">
+          <div class="col-xs-3">
+            <label for="mail">Email</label>
+            <input type="email"
+                   class="form-control form-control-lg"
+                   id="mail"
+                   [(ngModel)]="email" #mail="ngModel"
+                   required
+                   email
+                   name="email">
+            <small *ngIf="mail.invalid && mail.touched">Required</small>
+          </div>
+        </div>
+
+        <div class="form-group mb-3">
+          <div class="col-xs-3">
+            <label for="msg">Message</label>
+            <textarea type="text"
+                      class="form-control form-control-lg"
+                      id="msg"
+                      ngModel required
+                      [(ngModel)]="message" #msg="ngModel"
+                      name="message"></textarea>
+            <small *ngIf="msg.invalid && msg.touched">Required</small>
+          </div>
+        </div>
+
+<!--        <div class="form-group mb-3">-->
+<!--          <span class="form-check form-check-inline" *ngFor="let gen of gender" >-->
+<!--          <input type="radio"  class="form-check-input"-->
+<!--                 id="{{gen.id}}"-->
+<!--                 [ngModel]="defaultGender"-->
+<!--                 name="gender"-->
+<!--                 #gender="ngModel"-->
+<!--                 value="{{gen.value}}">-->
+<!--          <label class="form-check-label" for="{{gen.value}}">{{gen.value}}</label>-->
+<!--            </span>-->
+<!--        </div>-->
+<!--        <button (click)="setDefaultValue()">Default</button>-->
+
+        <button type="submit" class="btn btn-dark" [disabled]="!myForm.valid">Submit</button>
+      </form>
+    </div>
+    <div class="col"></div>
+  </div>
 </div>
 
