--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,7 +2,7 @@
   <div class="row h-100">
     <div class="col ">
       <h1>GET IN TOUCH</h1>
-      <form #myForm="ngForm" (ngSubmit)="onSubmit()">
+      <form #myForm="ngForm" (ngSubmit)="sendMessage(myForm.value)">
 
         <div class="form-group mb-3">
           <div class="col-xs-3">
@@ -46,23 +46,11 @@
           </div>
         </div>
 
-<!--        <div class="form-group mb-3">-->
-<!--          <span class="form-check form-check-inline" *ngFor="let gen of gender" >-->
-<!--          <input type="radio"  class="form-check-input"-->
-<!--                 id="{{gen.id}}"-->
-<!--                 [ngModel]="defaultGender"-->
-<!--                 name="gender"-->
-<!--                 #gender="ngModel"-->
-<!--                 value="{{gen.value}}">-->
-<!--          <label class="form-check-label" for="{{gen.value}}">{{gen.value}}</label>-->
-<!--            </span>-->
-<!--        </div>-->
-<!--        <button (click)="setDefaultValue()">Default</button>-->
-
-        <button type="submit" class="btn btn-dark" [disabled]="!myForm.valid">Submit</button>
+        <input type="submit" class="btn btn-dark" [disabled]="!myForm.valid">
       </form>
     </div>
-    <div class="col"></div>
+    <div class="col">
+    </div>
   </div>
 </div>
 
