--- a/src/app/components/grid-list/grid-list.component.html
+++ b/src/app/components/grid-list/grid-list.component.html
@@ -2,9 +2,9 @@
 <mat-grid-list  cols="4" rowHeight="1:1" gutterSize="50px"  >
 <mat-grid-tile *ngFor="let a of artImages" colspan="1" >
     <img src="{{a.image}}"  class="tile-image"  alt =''>
-    <mat-grid-tile-footer>
-        <h3>{{a.title}}</h3>
-    </mat-grid-tile-footer>
+<!--    <mat-grid-tile-footer>-->
+<!--&lt;!&ndash;        <h3>{{a.title}}</h3>&ndash;&gt;-->
+<!--    </mat-grid-tile-footer>-->
 </mat-grid-tile>
 
 </mat-grid-list>
