text changes and firebase reinit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         <li class="nav-item">
           <!-- <a class="nav-link" routerLink = ""
           fragment="art">Art</a> -->
-          <a class="nav-link" [routerLink] = "['/Art']">Art</a>
+          <a class="nav-link" [routerLink] = "['/Art']">Work</a>
         </li>
         <li class="nav-item">
           <!-- <a class="nav-link"  routerLink = ""
