--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,15 +1,15 @@
 
-<div class="flex-container container">
+<div class="flex-container container h-100">
 
-    <div class="flex-child">
-        <div class="d-flex align-items-center justify-content-center h-100">
+    <div class="flex-child bg " [ngStyle]="{backgroundImage:'url(/assets/images/bg.jpeg)'}">
+        <div class="d-flex  justify-content-center pt-5">
             <div>
-            <h1>Rijil Raj</h1>
-            <h3>PortraitArtist</h3><br>
-            <p>It is only by drawing often, drawing everything, drawing incessantly, that one fine day you discover, to your surprise,
-            that you have rendered something in its true character
-            <br> <small class="d-flex justify-content-end">Camille Pissarro</small>
-            </p>
+            <h1>Rijil</h1><br>
+            <h2>Portrait Artist</h2><br>
+<!--            <p>It is only by drawing often, drawing everything, drawing incessantly, that one fine day you discover, to your surprise,-->
+<!--            that you have rendered something in its true character-->
+<!--            <br> <small class="d-flex justify-content-end">Camille Pissarro</small>-->
+<!--            </p>-->
         </div>
         </div>
     </div>
