--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,40 @@
 <nav class="navbar navbar-expand-lg bg-light navbar-static-top">
 
   <div class="container-fluid">
-    <a class="navbar-brand"  [routerLink] = "['/About']">RL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"
-          routerLinkActive="active-link"
-          [routerLinkActiveOptions]="{exact: true}">
-          <!-- <a class="nav-link active" aria-current="page"
-           routerLink = "" fragment="about">About</a> -->
+            routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{exact: true}">
           <a class="nav-link active" aria-current="page"
              routerLinkActive="is-active"
-           [routerLink] = "['/About']" >About</a>
+             [routerLink]="['/About']">About</a>
         </li>
         <li class="nav-item">
-          <!-- <a class="nav-link" routerLink = ""
-          fragment="art">Art</a> -->
-          <a class="nav-link" [routerLink] = "['/Art']">Work</a>
+          <a class="nav-link" [routerLink]="['/Art']">Work</a>
         </li>
         <li class="nav-item">
-          <!-- <a class="nav-link"  routerLink = ""
-          fragment="contact">Contact</a> -->
-          <a class="nav-link"  [routerLink] = "['/Contact']"
-         >Contact</a>
+          <a class="nav-link" [routerLink]="['/Contact']"
+          >Contact</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<!-- <div>
-<app-about id="about"></app-about>
-<app-art id="art"></app-art>
-<app-contact id="contact"></app-contact>
-</div> -->
-
 <router-outlet></router-outlet>
+
+<!--<div class="footer div-footer bg-light">-->
+<!--  <mat-icon>share</mat-icon>-->
+<!--</div>-->
+
+<footer class="footer mt-auto py-3 bg-light">
+  <div class="container">
+      <mat-icon>share</mat-icon>
+  </div>
+</footer>
+
