--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -49,8 +49,8 @@
         <input type="submit" class="btn btn-dark" [disabled]="!myForm.valid">
       </form>
     </div>
-    <div class="col">
-    </div>
+<!--    <div class="col">-->
+<!--    </div>-->
   </div>
 </div>
 
