--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,22 +1,27 @@
+<div class="container p-3 my-3 ">
 
-<div class="flex-container container h-100">
+  <div class="row">
 
-    <div class="flex-child bg " [ngStyle]="{backgroundImage:'url(/assets/images/bg.jpeg)'}">
-        <div class="d-flex  justify-content-center pt-5">
-            <div>
-            <h1>Rijil</h1><br>
-            <h2>Portrait Artist</h2><br>
-<!--            <p>It is only by drawing often, drawing everything, drawing incessantly, that one fine day you discover, to your surprise,-->
-<!--            that you have rendered something in its true character-->
-<!--            <br> <small class="d-flex justify-content-end">Camille Pissarro</small>-->
-<!--            </p>-->
-        </div>
-        </div>
+    <div class="col-xs-6 col-md-6 col-lg-6 border shadow-sm rounded d-block ">
+      <img class="img-fluid" src="/assets/images/bg.jpeg" alt="">
     </div>
 
-    <div class="flex-child">
-        <img src="/assets/images/profilepic.png" alt="" class="responsive">
+    <div class="col-xs-6 col-md-6 col-lg-6  text-center  d-flex flex-column align-items-center
+    justify-content-center rounded d-block ">
+
+<!--       <img class="rounded-circle avatar" src="/assets/images/profilepic.png"/>-->
+
+      <h1 class="fs-1 pt-5">Rijil</h1><br>
+<!--        <h2 class="fs-2">Pencil Portrait Artist</h2><br>-->
+        <p class="fs-5 fw-light">They say that visual arts like drawing, painting and even sculpting starts with the
+          drawing of a line. What if the line itself became the entire art? For those who do not really know what this
+          is all about, the idea may seem both absurd and maybe a bit simplistic, but only until they try their hand at
+          line drawing art. You will know exactly what we mean when you look at the best examples of line drawing art
+          that we have shown here. You just have to take a peek at extraordinary line and wire sculptures to realize how
+          appealing and charming they can be. The thing is that though lines are the basis or the foundation of art, or
+          because they are the foundation, they feature in a lot of art forms. </p>
     </div>
 
+  </div>
 </div>
 
