--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,47 +1,4 @@
-img {
-    width:100%;
-    height:100%;
-}
-
-.flex-container {
-    display: flex;
-}
-
-.flex-child {
-    flex: 1;
-    //border: 2px solid #ffffff;
-}
-
-.flex-child:first-child {
-    margin-right: 20px;
-    margin-left: 20px;
-}
-
-.flex-child:last-child {
-    margin-right: 20px;
-}
-h1{
-  font-size: 4rem;
+h1, h2, p{
   font-family: 'Calligraffitti', cursive;
 }
-h2{
-  font-family: 'Calligraffitti', cursive;
-  font-size: 2rem;
-}
-p{
-font-family: 'Calligraffitti', cursive;
-font-size: 15px;
-small{
-    font-size: medium;
-    font-weight: 500;
-}
-}
-.bg{
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  //display: flex;
-  //justify-content: center;
-  //align-items: center;
-}
+
