--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,7 @@
 <div class="container p-3 my-3 ">
-  <div class="row h-100">
-    <div class="col ">
+  <div class="row ">
+
+    <div class="col-xs-6 col-md-6 col-lg-6">
       <h1>GET IN TOUCH</h1>
       <form #myForm="ngForm" (ngSubmit)="sendMessage(myForm.value)">
 
@@ -46,11 +47,23 @@
           </div>
         </div>
 
-        <input type="submit" class="btn btn-dark" [disabled]="!myForm.valid">
+        <input type="submit"  value="Send" class="btn btn-dark" [disabled]="!myForm.valid">
       </form>
+      <ngx-spinner
+        bdColor="rgba(51,51,51,0.8)"
+        size="medium"
+        color="#fff"
+        type="ball-scale-multiple"
+      >
+        <p style="font-size: 20px; color: white">Sending...</p>
+      </ngx-spinner>
     </div>
-<!--    <div class="col">-->
-<!--    </div>-->
+
+    <div class="col-xs-6 col-md-6 col-lg-6 ">
+      <ng-lottie [options]="options" (animationCreated)="animationCreated($event)"></ng-lottie>
+
+    </div>
+
   </div>
 </div>
 
