--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="col-xs-6 col-md-6 col-lg-6 ">
-      <ng-lottie [options]="options" (animationCreated)="animationCreated($event)"></ng-lottie>
+<!--      <ng-lottie [options]="options" (animationCreated)="animationCreated($event)"></ng-lottie>-->
 
     </div>
 
